<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignUpActivity">

    <!-->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/hongkong2"
        android:layout_marginTop="20dp"/>
    <!-->
    <TextView
        android:id="@+id/enter_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="1.5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:textColor="@color/white"
        android:text="@string/enter_information"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/enter_info"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@drawable/sign_up_curved_background"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/userType"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/printerOwner"
                    android:checked="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35dp"
                    android:text="@string/printerOwner" />

                <RadioButton
                    android:id="@+id/customer"
                    android:checked="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customer" />
            </RadioGroup>

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            app:endIconMode="clear_text"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/firstName"
                style="@style/textView"
                android:hint="@string/enterFirstName"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:endIconMode="clear_text"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/lastName"
                style="@style/textView"
                android:hint="@string/enterLastName"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text">

            <EditText
                android:id="@+id/emailAddress"
                style="@style/textView"
                android:hint="@string/enterEmail"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                style="@style/textView"
                android:hint="@string/enterPassword"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/confirmPassword"
                style="@style/textView"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/submit"
            android:textAllCaps="false" />

    </LinearLayout>


</RelativeLayout>